<resources>
    <string name="app_name">WatchList</string>
    <string name="watch_list">Watch List</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="facebook_app_id">338086423269756</string>
    <string name="fb_login_protocol_scheme">fb338086423269756</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_list">Movie List</string>
    <string name="my_stuff">My Stuff</string>
    <string name="my_profile">My Profile</string>
    <string name="my_favourite_movies">My Favourite Movies</string>
    <string name="my_hit_list">My Hit-List</string>
    <string name="user_interactions">User Interactions</string>
    <string name="friends">Friends</string>
    <string name="search_for_a_user">Search for a User</string>
    <string name="connectivity">Connectivity</string>
    <string name="sign_out">Sign Out</string>
    <string name="all">All</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="tv_movie">TV Movie</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>
    <string name="horror">Horror</string>
    <string name="search">Search</string>
    <string name="other_watchers">Other Watchers</string>
    <string name="more_details">More Details</string>
    <string name="overview">Overview</string>
    <string name="share">Share</string>
    <string name="please_type_your_password_to_confirm_your_changes">Please type your password to confirm your changes</string>
    <string name="save_changes">Save Changes</string>
    <string name="your_hit_list">Your Hit-List</string>
    <string name="s_hit_list">\'s Hit-List</string>
    <string name="feel_free_to_search_for_any_user">Feel free to search for any user</string>
    <string name="chat">Chat</string>
    <string name="favourite_movies">Favourite Movies</string>
    <string name="hit_list">Hit List</string>
    <string name="add_friend">Add Friend</string>
    <string name="sort_by">Sort by:</string>
    <string name="filter">Filter</string>
    <string name="s_favourite_list">\'s favourite list</string>
    <string name="your_friend_s_list">Your friend\'s list</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string-array name="genre_arrays">
        <item>All</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>TV Movie</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>

    <string-array name="sort_by">
        <item>Name asc.</item>
        <item>Name desc.</item>
        <item>Date asc.</item>
        <item>Date desc.</item>
    </string-array>

</resources>
