<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/movie_filters"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom|withText" >
        <menu>

            <item
                android:id="@+id/filter_all"
                android:title="@string/all" />
            <item
                android:id="@+id/filter_action"
                android:title="@string/action" />
            <item
                android:id="@+id/filter_adventure"
                android:title="@string/adventure" />
            <item
                android:id="@+id/filter_animation"
                android:title="@string/animation" />
            <item
                android:id="@+id/filter_comedy"
                android:title="@string/comedy" />
            <item
                android:id="@+id/filter_crime"
                android:title="@string/crime" />
            <item
                android:id="@+id/filter_documentary"
                android:title="@string/documentary" />
            <item
                android:id="@+id/filter_drama"
                android:title="@string/drama" />
            <item
                android:id="@+id/filter_family"
                android:title="@string/family" />
            <item
                android:id="@+id/filter_fantasy"
                android:title="@string/fantasy" />
            <item
                android:id="@+id/filter_horror"
                android:title="@string/horror" />
            <item
                android:id="@+id/filter_history"
                android:title="@string/history" />
            <item
                android:id="@+id/filter_Music"
                android:title="@string/music" />
            <item
                android:id="@+id/filter_mystery"
                android:title="@string/mystery" />
            <item
                android:id="@+id/filter_romance"
                android:title="@string/romance" />
            <item
                android:id="@+id/filter_sf"
                android:title="@string/science_fiction" />
            <item
                android:id="@+id/filter_tv"
                android:title="@string/tv_movie" />
            <item
                android:id="@+id/filter_thriller"
                android:title="@string/thriller" />
            <item
                android:id="@+id/filter_war"
                android:title="@string/war" />
            <item
                android:id="@+id/filter_western"
                android:title="@string/western" />

        </menu>

    </item>

</menu>