<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vrares.watchlist.android.activities.RegisterActivity">

    <EditText
        android:id="@+id/register_et_first_name"
        android:layout_marginBottom="20dp"
        android:hint="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/register_et_last_name"
        android:layout_below="@id/register_et_first_name"
        android:layout_marginBottom="20dp"
        android:hint="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/register_et_email"
        android:layout_below="@id/register_et_last_name"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/register_et_password"
        android:layout_below="@id/register_et_email"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/register_et_confirm_password"
        android:layout_below="@id/register_et_password"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:hint="@string/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/register_btn_register"
        android:text="@string/register"
        android:background="@drawable/bg_button"
        android:drawableStart="@drawable/ic_register"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>
