<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vrares.watchlist.android.activities.LoginActivity">

    <TextView
        android:id="@+id/login_tv_title"
        android:text="@string/watch_list"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/login_img_logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_tv_title"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/login_et_email"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_img_logo"/>

    <EditText
        android:id="@+id/login_et_password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_et_email"/>

    <Button
        android:id="@+id/login_btn_simple_login"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:paddingStart="60dp"
        android:paddingEnd="10dp"
        android:drawablePadding="-50dp"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_below="@id/login_et_password"/>

    <Button
        android:id="@+id/login_btn_google_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/login_with_google"
        android:drawableStart="@drawable/ic_if_social_media_socialmedia_network_share_socialnetwork_network_15_227039"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/bg_button"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_below="@id/login_btn_simple_login">

    </Button>

    <Button
        android:id="@+id/login_btn_facebook_login"
        android:layout_centerHorizontal="true"
        android:text="@string/login_with_facebook"
        android:background="@drawable/bg_button"
        android:drawableStart="@drawable/ic_if_facebook_1_174199"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_below="@id/login_btn_google_login"/>

    <Button
        android:id="@+id/login_btn_register"
        android:text="@string/register"
        android:background="@drawable/bg_button"
        android:drawableStart="@drawable/ic_register"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"/>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_btn_register"
        android:layout_centerInParent="true"
        android:layout_marginBottom="7dp"
        android:visibility="invisible" />


</RelativeLayout>
