<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vrares.watchlist.android.activities.UserProfileActivity"
    android:layout_margin="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_user_picture"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_centerHorizontal="true"
        tools:text="Vultur Rares"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@id/civ_user_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_user_email"
        android:layout_below="@id/tv_user_name"
        android:layout_centerHorizontal="true"
        tools:text="rares.vultur96@gmail.com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_user_chat"
        android:text="@string/chat"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"
        android:drawableStart="@drawable/ic_chat"
        android:paddingStart="60dp"
        android:paddingEnd="10dp"
        android:drawablePadding="-50dp"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_below="@id/tv_user_email"/>

    <Button
        android:id="@+id/btn_user_favourite"
        android:text="@string/favourite_movies"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"
        android:drawableStart="@drawable/ic_heart"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:drawablePadding="-5dp"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_below="@id/btn_user_chat"/>

    <Button
        android:id="@+id/btn_user_hit_list"
        android:text="@string/hit_list"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"
        android:drawableStart="@drawable/ic_target"
        android:paddingStart="60dp"
        android:paddingEnd="10dp"
        android:drawablePadding="-40dp"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_below="@id/btn_user_favourite"/>

    <Button
        android:id="@+id/btn_users_friend"
        android:text="@string/add_friend"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"
        android:drawableStart="@drawable/ic_plus"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="130dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
